# selective-counterfactual-simulation

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RESEARCH_CONSTITUTION.md  pyproject.toml
docs/: acceptance_report_template.md  benchmark_card.md  calibrated_protocol_lock_v1.md  claim_audit_table.md  custom_model_adapter.md  experiment_protocol.md  failure_gallery.md  false_accept_forensics_tags.md  one_page_project_summary.md  portfolio_summary.md  public_claims.md  quickstart.md  reproducibility_card.md  signal_semantics_registry.md  source_lineage.md  technical_note_limitations_first.md  two_tank_intervention_severity.md
examples/: __init__.py  custom_model_example.py  my_model_template.py
reports/: accepted_false_accept_forensics.md  benchmark_sanity.md  benchmark_usability_package_check.md  benchmark_usability_precondition_check.md  calibrated_cstr_report.md  calibrated_cstr_seed_sweep_report.md  calibrated_cstr_threshold_coverage_stress.md  calibrated_judge_decision_gate.json  calibrated_judge_decision_gate.md  calibrated_precondition_check.md  calibrated_refusal_judge.md  calibrated_seed_sweep_report.md  calibrated_threshold_coverage_stress.md  claim_language_scan.md  coverage_sensitivity.md  cstr_claim_audit.md  cstr_diagnosis_table_report.md  cstr_model_scenario_failure.md  cstr_precondition_check.md  cstr_repair_signal_audit.md  cstr_rmse_target_audit.md  cstr_sanity_report.md  cstr_seed_sweep_report.md  cstr_signal_overlap.md  cstr_smoke_report.md  cstr_statewise_error.md  cstr_weakness_diagnosis.json  cstr_weakness_diagnosis.md  (+81 more)
(+496 files in other folders)
