[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selective-counterfactual-simulation"
version = "0.1.0"
description = "Selective/refusal benchmark for counterfactual simulation under intervention shift."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "pydantic",
  "pyyaml",
  "typer",
  "pytest",
  "tqdm",
  "joblib",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

